Faster extraction, avoid spamming requests, vertical layout on smaller window

--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -16,6 +16,12 @@ body {
     flex-wrap: wrap;
 }
 
+@media screen and (max-width: 54rem) {
+    .row {
+        flex-direction: column;
+    }
+}
+
 .col {
     flex: 1;
     padding: 0 0.75rem;
